--------------------------------------------------------------------------
---------                  Ampache -- CHANGELOG                  ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.3.2-Alpha4 
  	- Introduced initial new interface 
	- Fixed a problem where downsampled songs wouldn't get recorded
		in stats due to their diminished size
	- Fixed column typo on Admin User page
  	- Fixed a problem with the no_symlinks setting which could
		cause some files to be missed regardless 
		(Thx solarium_rider)
  	- Fixed problem where Genre on OGG was not being correctly 
		picked up by catalog (Thx redswami)
  	- Added "Keyword" search which searches title, artist name
		and album name, also forced 'quick search' to always
		use Keyword (Thx Rubin)
  	- Added ability to Rename/Merge artists (Thx SpComb)
  	- Fixed a flaw in album art search which only returned a single
		result, now shows all results and allows you to pick
		the correct one. 
  	- Added ability to re-define album art search (Thx csammis)
		https://ampache.bountysource.com/Task.View?task_id=86
  	- Fixed a logic flaw where it would attempt to parse the m3u
		before all songs were cataloged 
		https://ampache.bountysource.com/Task.View?task_id=122
  	- Fixed a problem where updating your normal preferences when
		use_auth was off would clear admin prefs
	- Found a few more <? and replaced them with <?php

--------------------------------------------------------------------------
  v.3.3.2-Alpha3 11/29/2005
  	- Added marineam's patch to the Snoopy class which fixes a flaw
		in the new version which fails to escape single quotes
  	- Updated included Snoopy class due to vulnerability
		http://seclists.org/lists/fulldisclosure/2005/Oct/0536.html
		(Thx marineam)
	- Fixed a problem where it would attempt to redirect back to the