@@ -1,5 +1,3 @@
-	</td>
-</tr>
-</table>
+	</div>
 </body>
 </html>
