@@ -4,7 +4,9 @@
 
 --------------------------------------------------------------------------
   v.3.3.2-Alpha4 
-  	- Introduced initial new interface 
+  	- Updated Burgundy theme to take advantage of div format so that 
+		it acts like the old 'horizontal' menu
+  	- Introduced new 'vertical' interface that uses <divs>
 	- Fixed a problem where downsampled songs wouldn't get recorded
 		in stats due to their diminished size
 	- Fixed column typo on Admin User page
